--- a/AutoWeChat/build.gradle
+++ b/AutoWeChat/build.gradle
@@ -1,6 +1,4 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'com.neenbedankt.android-apt'//依赖注入
-//apply plugin: 'me.tatarka.retrolambda'
 Properties props = new Properties();
 props.load(new FileInputStream(file("../local.properties")));
 
@@ -14,14 +12,15 @@ android {
         }
     }
 
-    compileSdkVersion 26
-    buildToolsVersion "27.0.3"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
+
     defaultConfig {
         applicationId "site.duqian.autowechat"
-        minSdkVersion 16
-        targetSdkVersion 22
-        versionCode 35
-        versionName "1.0.35"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode rootProject.ext.versionCode
+        versionName rootProject.ext.versionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         javaCompileOptions {
@@ -53,34 +52,33 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    testImplementation 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:26+'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:retrofit-adapters:2.2.0'
-    compile 'com.squareup.retrofit2:retrofit-converters:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.squareup.okhttp3:okhttp:3.9.1'
-    compile 'com.squareup.okio:okio-parent:1.13.0'
-    compile 'com.google.dagger:dagger:2.7'
-    compile 'com.squareup.leakcanary:leakcanary-android:1.5.3'
-    //compile 'com.android.support:support-v4:25.4.0'
-    testCompile 'junit:junit:4.12'
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.android.support:appcompat-v7:26+'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit-adapters:2.2.0'
+    implementation 'com.squareup.retrofit2:retrofit-converters:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+    implementation 'com.squareup.okio:okio-parent:1.13.0'
+    implementation 'com.google.dagger:dagger:2.7'
+    implementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-    provided 'com.google.dagger:dagger-compiler:2.7'
-    provided 'org.glassfish:javax.annotation:10.0-b28'
-    compile files('libs/commons-codec-1.3.jar')
+    compileOnly 'com.google.dagger:dagger-compiler:2.7'
+    compileOnly 'org.glassfish:javax.annotation:10.0-b28'
+    implementation files('libs/commons-codec-1.3.jar')
 
     //xposed
-    provided 'de.robv.android.xposed:api:82'
-    provided 'de.robv.android.xposed:api:82:sources'
-    compile 'com.crystal:crystalrangeseekbar:1.1.1'
+    compileOnly 'de.robv.android.xposed:api:82'
+    compileOnly 'de.robv.android.xposed:api:82:sources'
+    implementation 'com.crystal:crystalrangeseekbar:1.1.1'
 
     //微控工具模块
-    compile files('libs/wtoolsdk.jar')
+    implementation files('libs/wtoolsdk.jar')
 }
