--- a/MainApp/build.gradle
+++ b/MainApp/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
-Properties props = new Properties();
-props.load(new FileInputStream(file("../local.properties")));
+Properties props = new Properties()
+props.load(new FileInputStream(file("../local.properties")))
 
 android {
     signingConfigs {
@@ -12,16 +12,15 @@ android {
             storePassword props['KEYSTORE_PASSWORD']
         }
     }
-
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "site.duqian.wchook"
-        minSdkVersion 19
-        targetSdkVersion 22
-        versionCode 7
-        versionName "1.151"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode rootProject.ext.versionCode
+        versionName rootProject.ext.versionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -43,26 +42,26 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:26+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.crystal:crystalrangeseekbar:1.1.1'
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.android.support:appcompat-v7:26+'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.crystal:crystalrangeseekbar:1.1.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     //xposed
-    provided 'de.robv.android.xposed:api:82:sources'
-    provided 'de.robv.android.xposed:api:82'
+    compileOnly 'de.robv.android.xposed:api:82:sources'
+    compileOnly 'de.robv.android.xposed:api:82'
     //googlemap
-    compile 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
     //高德地图
-    compile 'com.amap.api:search:5.0.0'
-    compile 'com.amap.api:map3d-native:5.0.0'
-    compile 'com.amap.api:map3d:5.0.0'
-    compile 'com.amap.api:location:3.4.0'
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    implementation 'com.amap.api:search:5.0.0'
+    implementation 'com.amap.api:map3d-native:5.0.0'
+    implementation 'com.amap.api:map3d:5.0.0'
+    implementation 'com.amap.api:location:3.4.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     //悬浮窗
     implementation 'com.github.yhaolpz:FloatWindow:1.0.8'
 
