--- a/MainApp/build.gradle
+++ b/MainApp/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
-Properties props = new Properties();
-props.load(new FileInputStream(file("../local.properties")));
+Properties props = new Properties()
+props.load(new FileInputStream(file("../local.properties")))
 
 android {
     signingConfigs {
@@ -13,15 +13,15 @@ android {
         }
     }
 
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "site.duqian.wchook"
-        minSdkVersion 19
+        minSdkVersion 20
         targetSdkVersion 22
-        versionCode 7
-        versionName "1.151"
+        versionCode 9
+        versionName "2.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -43,27 +43,50 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:26+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.crystal:crystalrangeseekbar:1.1.1'
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.crystal:crystalrangeseekbar:1.1.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     //xposed
-    provided 'de.robv.android.xposed:api:82:sources'
-    provided 'de.robv.android.xposed:api:82'
+    compileOnly 'de.robv.android.xposed:api:82:sources'
+    compileOnly 'de.robv.android.xposed:api:82'
     //googlemap
-    compile 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
     //高德地图
-    compile 'com.amap.api:search:5.0.0'
-    compile 'com.amap.api:map3d-native:5.0.0'
-    compile 'com.amap.api:map3d:5.0.0'
-    compile 'com.amap.api:location:3.4.0'
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    implementation 'com.amap.api:search:5.7.0'
+    implementation 'com.amap.api:map3d-native:5.0.0'
+    implementation 'com.amap.api:map3d:5.0.0'
+    implementation 'com.amap.api:location:3.8.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     //悬浮窗
     implementation 'com.github.yhaolpz:FloatWindow:1.0.8'
+}
 
+afterEvaluate {
+    installDebug.doLast {
+        updateSelfAPP.execute()
+        rebootVXP.execute()
+        launchSelfAPP.execute()
+        launchWechat.execute()
+    }
+}
+task updateSelfAPP(type: Exec) {
+    def pkg = android.defaultConfig.applicationId
+    commandLine android.adbExecutable, 'shell', 'am', 'broadcast', '-a', 'io.va.exposed.CMD', '-e', 'cmd', 'update', '-e', 'pkg', pkg
+}
+task rebootVXP(type: Exec) {
+    commandLine android.adbExecutable, 'shell', 'am', 'broadcast', '-a', 'io.va.exposed.CMD', '-e', 'cmd', 'reboot'
+}
+task launchSelfAPP(type: Exec) {
+    def pkg = 'site.duqian.wchook'
+    commandLine android.adbExecutable, 'shell', 'am', 'broadcast', '-a', 'io.va.exposed.CMD', '-e', 'cmd', 'launch', '-e', 'pkg', pkg
+}
+task launchWechat(type: Exec) {
+    def pkg = 'com.tencent.mm'
+    commandLine android.adbExecutable, 'shell', 'am', 'broadcast', '-a', 'io.va.exposed.CMD', '-e', 'cmd', 'launch', '-e', 'pkg', pkg
 }
