--- a/MainApp/build.gradle
+++ b/MainApp/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
 
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:26+'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.crystal:crystalrangeseekbar:1.1.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
